{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 1034,
  "lineage": "023c660c-a76f-2240-9f22-11a487631547",
  "resources": [
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_eip",
      "name": "k8s_nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00816d01f10ee28c3",
            "public_dns": "ec2-54-86-169-178.compute-1.amazonaws.com",
            "public_ip": "54.86.169.178",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac80df6eff0e70b5",
            "arn": "arn:aws:ec2:us-east-1:531815757023:instance/i-0731ddab538c6ca74",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0731ddab538c6ca74",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f316b7fb0e3c2538",
            "private_dns": "ip-10-0-11-87.ec2.internal",
            "private_ip": "10.0.11.87",
            "public_ip": "35.153.74.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c54f7df4f95b2ab2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8a3869a48f4b20e",
            "tags": {
              "KubernetesCluster": "mgmt-cluster'",
              "Name": "k8s-bastion",
              "kubernetes.io/cluster/mgmt-cluster'": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b447cbe8f61600e2"
            ]
          },
          "dependencies": [
            "module.aws_infrastructure.aws_security_group.bastion_sg",
            "module.aws_infrastructure.aws_subnet.k8s_public_subnet_1",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:internet-gateway/igw-0728cc52c591fe874",
            "id": "igw-0728cc52c591fe874",
            "owner_id": "531815757023",
            "tags": {
              "Name": "K8S IGW"
            },
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "k8s_nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00816d01f10ee28c3",
            "id": "nat-073122f300cafdcf6",
            "network_interface_id": "eni-046e5b6e6491d0c59",
            "private_ip": "10.0.11.235",
            "public_ip": "54.86.169.178",
            "subnet_id": "subnet-0f8a3869a48f4b20e"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_eip.k8s_nat_eip",
            "module.aws_infrastructure.aws_internet_gateway.k8s_igw",
            "module.aws_infrastructure.aws_subnet.k8s_public_subnet_1",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07696a45ac2bcf7f3",
            "owner_id": "531815757023",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-073122f300cafdcf6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "K8S Private Route Table"
            },
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_eip.k8s_nat_eip",
            "module.aws_infrastructure.aws_internet_gateway.k8s_igw",
            "module.aws_infrastructure.aws_nat_gateway.k8s_nat_gw",
            "module.aws_infrastructure.aws_subnet.k8s_public_subnet_1",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03450c84f496e3783",
            "owner_id": "531815757023",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0728cc52c591fe874",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "K8S Public Route Table"
            },
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_internet_gateway.k8s_igw",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_private_rt_assoc_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0616ffeaca4f307a8",
            "route_table_id": "rtb-07696a45ac2bcf7f3",
            "subnet_id": "subnet-033cf484e6d1798bc"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_eip.k8s_nat_eip",
            "module.aws_infrastructure.aws_internet_gateway.k8s_igw",
            "module.aws_infrastructure.aws_nat_gateway.k8s_nat_gw",
            "module.aws_infrastructure.aws_route_table.k8s_private_rt",
            "module.aws_infrastructure.aws_subnet.k8s_private_subnet_1",
            "module.aws_infrastructure.aws_subnet.k8s_public_subnet_1",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_private_rt_assoc_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a35fc2e91b6330",
            "route_table_id": "rtb-07696a45ac2bcf7f3",
            "subnet_id": "subnet-0ad278a1b2864dfe0"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_eip.k8s_nat_eip",
            "module.aws_infrastructure.aws_internet_gateway.k8s_igw",
            "module.aws_infrastructure.aws_nat_gateway.k8s_nat_gw",
            "module.aws_infrastructure.aws_route_table.k8s_private_rt",
            "module.aws_infrastructure.aws_subnet.k8s_private_subnet_2",
            "module.aws_infrastructure.aws_subnet.k8s_public_subnet_1",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_public_rt_assoc_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47f372e51a8ecca",
            "route_table_id": "rtb-03450c84f496e3783",
            "subnet_id": "subnet-0f8a3869a48f4b20e"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_internet_gateway.k8s_igw",
            "module.aws_infrastructure.aws_route_table.k8s_public_rt",
            "module.aws_infrastructure.aws_subnet.k8s_public_subnet_1",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_public_rt_assoc_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f43241eb1129909a",
            "route_table_id": "rtb-03450c84f496e3783",
            "subnet_id": "subnet-01c77e352543d2ddb"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_internet_gateway.k8s_igw",
            "module.aws_infrastructure.aws_route_table.k8s_public_rt",
            "module.aws_infrastructure.aws_subnet.k8s_public_subnet_2",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:security-group/sg-0b447cbe8f61600e2",
            "description": "Allow traffic for K8S Control Plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b447cbe8f61600e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-ssh",
            "name_prefix": null,
            "owner_id": "531815757023",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "mgmt-cluster'",
              "Name": "bastion-sg",
              "kubernetes.io/cluster/mgmt-cluster'": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:security-group/sg-05ce36731549163a0",
            "description": "Allow traffic for K8S Control Plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ce36731549163a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Ingress Control Plane",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "internal-ssh",
            "name_prefix": null,
            "owner_id": "531815757023",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "mgmt-cluster'",
              "Name": "internal-ssh",
              "kubernetes.io/cluster/mgmt-cluster'": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_agent_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:security-group/sg-0356b7ba04c25cf78",
            "description": "Allow traffic for K8S Agent",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0356b7ba04c25cf78",
            "ingress": [],
            "name": "k8s-agent-sg",
            "name_prefix": null,
            "owner_id": "531815757023",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "mgmt-cluster'",
              "Name": "k8s-agent-sg",
              "kubernetes.io/cluster/mgmt-cluster'": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_cp_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:security-group/sg-0e5cd6e3a5ab22000",
            "description": "Allow traffic for K8S Control Plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5cd6e3a5ab22000",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Control Plane",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "k8s-cp-sg",
            "name_prefix": null,
            "owner_id": "531815757023",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "mgmt-cluster'",
              "Name": "k8s-cp-sg",
              "kubernetes.io/cluster/mgmt-cluster'": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:security-group/sg-0cad88db140b5368a",
            "description": "Allow traffic for K8S DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cad88db140b5368a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Ingress Control Plane",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "k8s-db-sg",
            "name_prefix": null,
            "owner_id": "531815757023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s_agent_sg_http_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1435709708",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0356b7ba04c25cf78",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_security_group.k8s_agent_sg",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s_agent_sg_https_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1531476055",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0356b7ba04c25cf78",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_security_group.k8s_agent_sg",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s_cp_sg_self_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2253827092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e5cd6e3a5ab22000",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_security_group.k8s_cp_sg",
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_private_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:subnet/subnet-033cf484e6d1798bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-033cf484e6d1798bc",
            "map_public_ip_on_launch": false,
            "owner_id": "531815757023",
            "tags": {
              "Name": "K8S Private Subnet 1"
            },
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_private_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:subnet/subnet-0ad278a1b2864dfe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ad278a1b2864dfe0",
            "map_public_ip_on_launch": false,
            "owner_id": "531815757023",
            "tags": {
              "Name": "K8S Private Subnet 2"
            },
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_public_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:subnet/subnet-0f8a3869a48f4b20e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0f8a3869a48f4b20e",
            "map_public_ip_on_launch": false,
            "owner_id": "531815757023",
            "tags": {
              "Name": "K8S Public Subnet 1"
            },
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_public_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:subnet/subnet-01c77e352543d2ddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-01c77e352543d2ddb",
            "map_public_ip_on_launch": false,
            "owner_id": "531815757023",
            "tags": {
              "Name": "K8S Public Subnet 2"
            },
            "vpc_id": "vpc-0adfe20f579d31f89"
          },
          "dependencies": [
            "module.aws_infrastructure.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_infrastructure",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531815757023:vpc/vpc-0adfe20f579d31f89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074610bc039356a2b",
            "default_route_table_id": "rtb-08a8f193d88ce95f7",
            "default_security_group_id": "sg-011d19fc319723299",
            "dhcp_options_id": "dopt-0a0a9870",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0adfe20f579d31f89",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a8f193d88ce95f7",
            "owner_id": "531815757023",
            "tags": {
              "Name": "K8S VPC"
            }
          }
        }
      ]
    }
  ]
}